test/libsolidity/syntaxTests/pragma/broken_version_1.sol
pragma solidity ^0^1;
// ----
// ParserError 1684: (0-21): Found version pragma, but failed to parse it. Please ensure there is a trailing semicolon.
